--- a/Source/changelog.txt
+++ b/Source/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.2
+  Bugfixes:
+    - 0.17.52 hotfix.
+
+---------------------------------------------------------------------------------------------------
 Version: 0.1.1
   Changes:
     - Added proper changelog.
