--- a/Source/changelog.txt
+++ b/Source/changelog.txt
@@ -1,4 +1,12 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.2.0  
+  Changes:
+    - 0.18 update.
+    - Science pack recipes now obey original resul_count values after being made to require liquid.
+    - Chemical plants should now spew correct color when working on a liquid or science pack recipe.
+    - General code cleanup.
+
+---------------------------------------------------------------------------------------------------
 Version: 0.1.3
   Bugfixes:
     - Fixed failure to load based on old chemical plant prototype being used for beginning chemical plant.    
