--- a/Source/changelog.txt
+++ b/Source/changelog.txt
@@ -1,4 +1,13 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.2.2  
+  Changes:
+    - Added optional dependency to slowncheap items to gurantee mod load order.
+    - Updated slowncheap chemical plant graphics (higher res still gray).
+    - Removed sand as a separate minable ore. Stone now much be processed into sand, which is then processed into empty science bottles
+    - Added sand graphic I made from vanilla terrain graphics!
+    - Updated menu ordering of autoplace controls, items, recipes, resources...
+
+---------------------------------------------------------------------------------------------------
 Version: 0.2.1  
   Changes:
     - Added pl translation thanks to github user Tomirad.
